OpenGL: Create ContextExternal for use without EGL
Allows passing in appropriate callbacks for managing
the OpenGL context, as opposed to relying on Dawn+EGL
for OpenGL context management.

--- a/src/dawn/native/CMakeLists.txt
+++ b/src/dawn/native/CMakeLists.txt
@@ -444,6 +444,8 @@ if (DAWN_ENABLE_OPENGL)
         "opengl/ComputePipelineGL.h"
         "opengl/ContextEGL.cpp"
         "opengl/ContextEGL.h"
+        "opengl/ContextExternal.cpp"
+        "opengl/ContextExternal.h"
         "opengl/DeviceGL.cpp"
         "opengl/DeviceGL.h"
         "opengl/EGLFunctions.cpp"
